# reat

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml  checks.yml  coverage.yml
src/: lib.rs  main.rs
src/cli/: app.rs  args.rs  mod.rs  parse.rs  resformat.rs  stranding.rs  validate.rs
src/cli/loci/: args.rs  parse.rs  resformat.rs  run.rs
src/cli/roi/: args.rs  parse.rs  resformat.rs  run.rs
src/cli/rois/: args.rs  mod.rs  parse.rs  resformat.rs  run.rs
src/cli/shared/: args.rs  mod.rs  parse.rs  run.rs  stranding.rs  style.rs  thread_cache.rs  validate.rs
src/cli/sites/: args.rs  mod.rs  parse.rs  resformat.rs  run.rs
src/core/: dna.rs  mod.rs  read.rs  runner.rs  strandutil.rs  workload.rs
src/core/counting/: mod.rs  nuccounts.rs
src/core/counting/buffers/: flatbuf.rs  locus.rs  mod.rs  roibuf.rs  strandedbuf.rs  unstrandedbuf.rs
src/core/counting/nuccounter/: basecnt.rs  basecounter.rs  mod.rs  strandcnt.rs
src/core/dna/: alphabet.rs  mod.rs  ncounts.rs
src/core/filtering/reads/: by_quality.rs  mod.rs  sequential.rs
src/core/filtering/summary/: by_mismatches.rs  mod.rs
src/core/hooks/: engine.rs  mod.rs
src/core/hooks/filters/: master.rs  mismatches.rs  mod.rs  (+1 more)
src/core/io/: bed.rs  fasta.rs  hts.rs  mod.rs  table.rs  utils.rs  vcf.rs
src/core/mismatches/: mod.rs  utils.rs
src/core/refnuc/: by_heuristic.rs  mod.rs
src/core/refpred/: autoref.rs  fasta.rs  mod.rs  vcf.rs
src/core/rpileup/: collider.rs  hts.rs  mod.rs
src/core/run/: loci.rs  mod.rs  regions.rs  thread_cache.rs
src/core/runner/: base.rs  mod.rs
src/core/stats/: editing_index.rs  mod.rs
src/core/stranding/: mod.rs
src/core/summary/: interval.rs  locus.rs  mismatches.rs  mod.rs  roi.rs
src/core/workload/: mod.rs  roi.rs  site.rs
src/rada/: dna.rs  mod.rs  read.rs  regions.rs  sites.rs  workload.rs
src/rada/counting/: mod.rs
src/rada/modules/: dna.rs  mod.rs  read.rs
src/rada/refnuc/: by_heuristic.rs  mod.rs
src/rada/run/: context.rs  loci.rs  mod.rs  regions.rs  sites.rs  workload.rs
src/rada/stats/: editing_index.rs  mod.rs
src/rada/summarization/: mod.rs
src/rada/summary/: interval.rs  locus.rs  mismatches.rs
src/rada/workload/: mod.rs
tests/: igv_session.xml  paths.rs  regress.rs
tests/resources/GRCh38/: Homo_sapiens.GRCh38.dna.primary_assembly.fa.gz.fai  Homo_sapiens.GRCh38.dna.primary_assembly.fa.gz.gzi
tests/resources/bam/: SRX6966474.bam  SRX6966474.bam.bai
vcf-test/: repeat.bed
(+153 files in other folders)
