[package]
name = "reat"
version = "0.0.1"
edition = "2021"
authors = ["Aleksandr Fedorov <anfedorov@hse.ru>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/alnfedorov/rada"

[dependencies]
rust-htslib = "0.38.2"
rayon = "1.5.1"
thread_local = "1.1.3"
bio-types = "0.12.0"
flate2 = "1.0.20"
bio = "0.34.0"
itertools = "0.10.3"
clap = { version = "3.0.0", features = ["wrap_help"] }
indicatif = "0.16.2"
derive-getters = "0.2.0"
derive_more = "0.99.16"

[dev-dependencies]
mockall = "0.11"
tempfile = "3.2"
static_init = { git = "https://gitlab.com/vkahl/static_init/", rev = "bffc02b27bcaa052994f14d7d2013a957cb74187" }
file_diff = "1.0"

[profile.release]
lto = true
