[package]
name = "reat"
version = "0.0.1"
edition = "2021"
authors = ["Aleksandr Fedorov <anfedorov@hse.ru>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/alnfedorov/reat"

[dependencies]
rust-htslib = "0.39.5"
rayon = "1.5.3"
thread_local = "1.1.4"
bio-types = "0.13.0"
flate2 = "1.0.24"
bio = "0.41.0"
itertools = "0.10.3"
serde = "1.0.144"
csv = "1.1.6"
clap = { version = "3.2.17", features = ["wrap_help", "cargo"] }
indicatif = "0.16.2"
derive-getters = "0.2.0"
derive_more = "0.99.17"
dyn-clone = "1.0.8"
soa_derive = {git = "https://github.com/lumol-org/soa-derive", rev="408affda60bc4b4cf65d461e164a88f16cdfdf06"}
funty = "2.0.0"

[dev-dependencies]
mockall = "0.11.2"
tempfile = "3.3.0"
static_init = "1.0.3"
file_diff = "1.0"
serde_test = "1.0.144"
rand = "0.8.5"

[profile.release]
lto = true
